# validation-series-quant

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
projects/01-gini-conservative-ties/: README.md
projects/01-gini-conservative-ties/notebooks/: 01_demo_ties.ipynb
src/validation_series_quant/vs01_gini_ties/: metrics.py
tests/: test_gini_ties.py
